--- a/templates/user/settings.plush.html
+++ b/templates/user/settings.plush.html
@@ -94,6 +94,18 @@
                             </div>
                         </div>
                         <div class="list-group-item text-white fs-5">
+                            <div class="d-flex justify-content-between">
+                                <div>
+                                    Hide Implants
+                                </div>
+                                <div>
+                                    <div class=" form-check form-switch d-flex flex-row align-items-end">
+                                        <input class="form-check-input" type="checkbox" name="hide_implants" role="switch" <%= checked(user.Settings.HideImplants) %>>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="list-group-item text-white fs-5">
                             <button type="submit" class="btn btn-primary btn-block">
                                 Update Settings
                             </button>
