--- a/templates/user/layout.plush.html
+++ b/templates/user/layout.plush.html
@@ -32,8 +32,17 @@
         <%= yield %>
         <%= partial("footer.html") %>
 
+        <script>
+            var user = JSON.parse(`<%=raw(jsonUser)%>`)
+        </script>
+
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.6/numeral.min.js"></script>
+
+        <%= javascriptTag("helpers.js") %>
+        <%= javascriptTag("skills.js") %>
     </body>
 
 </html>
